switch to array list